--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 @font-face {
-       font-family: JetBrains Mono; src: url("fonts/JetBrainsMono-Medium.ttf") format("truetype");
-    }
+    font-family: JetBrains Mono; src: url("fonts/JetBrainsMono-Medium.ttf") format("truetype");
+}
 
 :root {
     --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -9,34 +9,77 @@
     --border: 2px solid #ddd;
     --left-msg-bg: #ececec;
     --right-msg-bg: #579ffb;
-  }
+    --right-msg-fg: #fff;
+    --msger-header-bg: #eee;
+    --msger-header-colour: #666;
+    --msger-scrollbar-track: #ddd;
+    --msger-scrollbar-thumb: #bdbdbd;
+    --msger-chat-bg: #fcfcfe;
+    --inputbar-area: #eee;
+    --msger-send-button-bg: rgb(0, 196, 65);
+    --msger-send-button-fg: #fff;
+    --msger-send-button-hover-bg: rgb(0, 180, 50);
+    --msger-input-bg: #ddd;
+    --msg-img-bg: #ddd;
+    --msger-input-placeholder-fg: #838384;
+}
 
-  html * {
+:root.dark-scheme {
+    --body-bg: linear-gradient(135deg, #2d2d2d 0%, #6a6a6a 100%);
+    --msger-bg: #351F39;
+    --border: 2px solid #555;
+    --left-msg-bg: #444;
+    --right-msg-bg: #0078d7;
+    --right-msg-fg: #fff;
+    --msger-header-bg: #6e6e6e;
+    --msger-header-colour: #c9c9c9;
+    --msger-header-hover-colour: #e8e8e8;
+    --msger-scrollbar-track: #ddd;
+    --msger-scrollbar-thumb: #bdbdbd;
+    --msger-chat-bg: #555556;
+    --inputbar-area: #555556;
+    --msger-send-button-bg: rgb(0, 196, 65);
+    --msger-send-button-fg: #fff;
+    --msger-send-button-hover-bg: rgb(0, 180, 50);
+    --msger-input-bg: #69696a;
+    --msger-input-fg: #fff;
+    --msger-input-placeholder-fg: #838384;
+    --msg-img-bg: #ddd;
+}
+
+html * {
     font-family: JetBrains Mono;
-  }
+    transition: all 0.23s;
+}
 
-  html {
+html {
     box-sizing: border-box;
-  }
+}
 
-  *,
-  *:before,
-  *:after {
+*,
+*:before,
+*:after {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-  }
+}
 
-  body {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-image: var(--body-bg);
-    font-family: Helvetica, sans-serif;
-  }
+}
 
-  .msger {
+@media (max-width: 867px) {
+    .msger {
+        margin: 0;
+        height: 100%;
+    }
+}
+
+.msger {
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
@@ -48,113 +91,163 @@
     border-radius: 5px;
     background: var(--msger-bg);
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
-  }
+}
 
-  .msger-header {
+.msger-header {
     display: flex;
     justify-content: space-between;
     padding: 10px;
     border-bottom: var(--border);
-    background: #eee;
-    color: #666;
-  }
+    background: var(--msger-header-bg);
+    color: var(--msger-header-colour);
+}
 
-  .msger-chat {
+.msger-chat {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-  }
-  .msger-chat::-webkit-scrollbar {
+}
+
+.msger-chat::-webkit-scrollbar {
     width: 6px;
-  }
-  .msger-chat::-webkit-scrollbar-track {
-    background: #ddd;
-  }
-  .msger-chat::-webkit-scrollbar-thumb {
-    background: #bdbdbd;
-  }
-  .msg {
+}
+
+.msger-chat::-webkit-scrollbar-track {
+    background: (--msger-scrollbar-track);
+}
+
+.msger-chat::-webkit-scrollbar-thumb {
+    background: (--msger-scrollbar-thumb);
+}
+
+.msg {
     display: flex;
     align-items: flex-end;
     margin-bottom: 10px;
-  }
-  .msg:last-of-type {
+}
+
+.msg:last-of-type {
     margin: 0;
-  }
-  .msg-img {
+}
+
+.msg-img {
     width: 50px;
     height: 50px;
     margin-right: 10px;
-    background: #ddd;
+    background: (--msg-img-bg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     border-radius: 50%;
-  }
-  .msg-bubble {
+}
+
+.msg-bubble {
     max-width: 450px;
     padding: 15px;
     border-radius: 15px;
     background: var(--left-msg-bg);
-  }
-  .msg-info {
+    color: var(--right-msg-fg);
+}
+
+.msg-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-  }
-  .msg-info-name {
+}
+
+.msg-info-name {
     margin-right: 10px;
     font-weight: bold;
-  }
-  .msg-info-time {
+}
+
+.msg-info-time {
     font-size: 0.85em;
-  }
+}
 
-  .left-msg .msg-bubble {
+.left-msg .msg-bubble {
     border-bottom-left-radius: 0;
-  }
+}
 
-  .right-msg {
+.right-msg {
     flex-direction: row-reverse;
-  }
-  .right-msg .msg-bubble {
-    background: var(--right-msg-bg);
-    color: #fff;
-    border-bottom-right-radius: 0;
-  }
-  .right-msg .msg-img {
-    margin: 0 0 0 10px;
-  }
+}
 
-  .msger-inputarea {
+.right-msg .msg-bubble {
+    background: var(--right-msg-bg);
+    color: var(--right-msg-fg);
+    border-bottom-right-radius: 0;
+}
+
+.msg-bubble.sending {
+    background: var(--msger-input-bg);
+    opacity: 0.5;
+}
+
+.right-msg .msg-img {
+    margin: 0 0 0 10px;
+}
+
+.msger-inputarea {
     display: flex;
     padding: 10px;
     border-top: var(--border);
-    background: #eee;
-  }
-  .msger-inputarea * {
+    background: var(--inputbar-area);
+}
+
+.msger-inputarea * {
     padding: 10px;
     border: none;
     border-radius: 3px;
     font-size: 1em;
-  }
-  .msger-input {
+}
+
+.msger-input {
     flex: 1;
-    background: #ddd;
-  }
-  .msger-send-btn {
+    background: var(--msger-input-bg);
+    color: var(--msger-input-fg);
+}
+
+::placeholder {
+    color: var(--msger-input-placeholder-fg);
+}
+
+.msger-input:focus {
+    flex: 1;
+    background: var(--msger-input-bg);
+    outline: none;
+}
+
+.msger-send-btn {
     margin-left: 10px;
-    background: rgb(0, 196, 65);
-    color: #fff;
+    background: var(--msger-send-button-bg);
+    color: var(--msger-send-button-fg);
     font-weight: bold;
     cursor: pointer;
     transition: background 0.23s;
-  }
-  .msger-send-btn:hover {
-    background: rgb(0, 180, 50);
-  }
+}
 
-  .msger-chat {
-    background-color: #fcfcfe;
-  }
+.msger-config-btn {
+    color: var(--msger-header-colour);
+    border: none;
+    cursor: pointer;
+    font-size: 12pt;
+    background: none;
+    margin-left: 10px;
+}
+
+.msger-config-btn:hover {
+    color: var(--msger-header-hover-colour);
+    transition: all 0.23s;
+    cursor: pointer;
+    font-size: 12pt;
+    margin-left: 10px;
+}
+
+.msger-send-btn:hover {
+    background: var(--msger-send-button-hover-bg)
+}
+
+.msger-chat {
+    background-color: var(--msger-chat-bg);
+}
