--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100svh;
     background-image: var(--body-bg);
     position: relative;
 }
@@ -274,7 +274,7 @@ body {
     .msger {
         margin: 0px;
         border-radius: 0px;
-        height: 100vh;
+        height: 100svh;
     }
 
     html {
