Some refactorings and improvements.

--- a/styles/index.css
+++ b/styles/index.css
@@ -131,7 +131,7 @@ body {
     margin: 0;
 }
 
-.msg-img {
+/* .msg-img {
     width: 50px;
     height: 50px;
     margin-right: 10px;
@@ -140,14 +140,21 @@ body {
     background-position: center;
     background-size: cover;
     border-radius: 50%;
-}
+} */
 
 .msg-bubble {
-    max-width: 450px;
+    max-width: 100%;
+    min-width: 0;
+    overflow-wrap: break-word;
     padding: 15px;
     border-radius: 15px;
     background: var(--left-msg-bg);
     color: var(--right-msg-fg);
+    word-break: break-word;
+}
+
+.msg-bubble img {
+    cursor: pointer;
 }
 
 .msg-info {
@@ -223,6 +230,7 @@ body {
     margin-left: 10px;
     background: var(--msger-send-button-bg);
     color: var(--msger-send-button-fg);
+    max-width: min-content;
     font-weight: bold;
     cursor: pointer;
     transition: background 0.23s;
@@ -237,6 +245,12 @@ body {
     cursor: pointer;
     transition: background 0.23s;
     padding:0;
+    display: flex;
+    align-items: center;
+}
+
+.msger-attachment-input {
+    display: none;
 }
 
 .msger-attachment-btn:hover {
@@ -268,6 +282,10 @@ body {
 
 .msger-chat {
     background-color: var(--msger-chat-bg);
+}
+
+.msg-bubble:hover {
+    filter: brightness(1.2);
 }
 
 @media (max-width: 512px) {
