--- a/styles/index.css
+++ b/styles/index.css
@@ -1,62 +1,10 @@
 
-@font-face {
-    font-family: JetBrains Mono; src: url("fonts/JetBrainsMono-Medium.ttf") format("truetype");
-}
-
-:root {
-    --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-    /* --msger-bg: #fff; */
-    --border: 2px solid #ddd;
-    --left-msg-bg: #ececec;
-    --right-msg-bg: #579ffb;
-    --right-msg-fg: #fff;
-    --msger-header-bg: #eee;
-    --msger-header-colour: #5d5d5d;
-    --msger-scrollbar-track: #ddd;
-    --msger-scrollbar-thumb: #bdbdbd;
-    --msger-chat-bg: #fcfcfe;
-    --inputbar-area: #eee;
-    --msger-send-button-bg: rgb(0, 196, 65);
-    --msger-send-button-fg: #fff;
-    --msger-send-button-hover-bg: rgb(0, 180, 50);
-    --msger-input-bg: #ddd;
-    --msg-img-bg: #ddd;
-    --msger-input-placeholder-fg: #838384;
-}
-
-:root.dark-scheme {
-    --body-bg: #1e1f22;
-    /* --body-bg: linear-gradient(135deg, #2d2d2d 0%, #6a6a6a 100%); */
-    /* --msger-bg: #351F39; */
-    --msger-bg: #38415f;
-    --border: 1px solid #0000007b;
-    --left-msg-bg: #444;
-    --right-msg-bg: #0078d7;
-    --right-msg-fg: #fff;
-    --msger-header-bg: rgba(63, 62, 62, 0.2);
-    --msger-header-colour: #dcdcdc;
-    --msger-header-hover-colour: #e8e8e8;
-    --msger-scrollbar-track: #ddd;
-    --msger-scrollbar-thumb: #bdbdbd;
-    --msger-chat-bg: transparent;
-    --inputbar-area: rgb(85, 85, 86, 0);
-    --msger-send-button-bg: rgb(47, 134, 76);
-    --msger-send-button-fg: #fff;
-    --msger-send-button-hover-bg: rgb(62, 144, 89);
-    --msger-input-bg: rgb(105, 105, 106, 0.2);
-    --msger-input-fg: #fff;
-    --msger-input-placeholder-fg: #838384;
-    --msg-img-bg: #ddd;
+html {
+    box-sizing: border-box;
 }
 
 html * {
-    font-family: JetBrains Mono;
-    transition: all 0.23s;
-    /*font-size: calc(70% + 0.8vmin);*/
-}
-
-html {
-    box-sizing: border-box;
+    font-family: JetBrains Mono, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 *,
@@ -75,11 +23,12 @@ body {
     background-color: var(--body-bg);
     background-image: var(--body-bg);
     position: relative;
+    color: var(--msger-header-colour);
 }
 
-.msger {
+#app {
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
@@ -89,13 +38,21 @@ body {
     border: transparent;
     border-radius: 5px;
     background: var(--msger-bg);
+    background-image: var(--msger-bg-image);
+    background-size: cover;
     box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
 }
 
-.msger-header {
+/********************************/
+/********     HEADER     ********/
+/********************************/
+
+.header {
     display: flex;
+    flex: 0 0 auto; /* Header size won't shrink or grow */
     justify-content: space-between;
-    padding: 10px;
+    padding: 12px;
+    font-size: 16pt;
     /* border-bottom: var(--border); */
     border-radius: 5px 5px 0px 0px;
     background: var(--msger-header-bg);
@@ -109,217 +66,104 @@ body {
     user-select: none; /* Standard */
 }
 
-.msger-chat {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
+#header-title {
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
 }
 
-.msger-chat::-webkit-scrollbar {
-    width: 6px;
-}
-
-.msger-chat::-webkit-scrollbar-track {
-    background: (--msger-scrollbar-track);
-}
-
-.msger-chat::-webkit-scrollbar-thumb {
-    background: (--msger-scrollbar-thumb);
-}
-
-.msg {
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 10px;
-}
-
-.msg:last-of-type {
-    margin: 0;
-}
-
-/* .msg-img {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-    background: (--msg-img-bg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-} */
-
-.msg-bubble {
-    max-width: 100%;
-    min-width: 0;
-    overflow-wrap: break-word;
-    padding: 15px;
-    border-radius: 15px;
-    background: var(--left-msg-bg);
-    color: var(--right-msg-fg);
-    word-break: break-word;
-}
-
-.msg-bubble img {
-    cursor: pointer;
-}
-
-.msg-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.msg-info-name {
-    margin-right: 10px;
-    font-weight: bold;
-}
-
-.msg-info-time {
-    font-size: 0.85em;
-}
-
-.left-msg .msg-bubble {
-    border-bottom-left-radius: 0;
-}
-
-.right-msg {
-    flex-direction: row-reverse;
-}
-
-.right-msg .msg-bubble {
-    background: var(--right-msg-bg);
-    color: var(--right-msg-fg);
-    border-bottom-right-radius: 0;
-}
-
-.msg-bubble.sending {
-    background: var(--msger-input-bg);
-    opacity: 0.5;
-}
-
-.right-msg .msg-img {
-    margin: 0 0 0 10px;
-}
-
-.msger-input {
-    flex: 1;
-    background: var(--msger-input-bg);
-    color: var(--msger-input-fg);
-}
-
-::placeholder {
-    color: var(--msger-input-placeholder-fg);
-}
-
-.msger-config-btn {
+.header button {
     color: var(--msger-header-colour);
     border: none;
     cursor: pointer;
-    font-size: 12pt;
+    font-size: 16pt;
     background: none;
     margin-left: 10px;
 }
 
-.msger-config-btn:hover {
+.header button:hover {
     color: var(--msger-header-hover-colour);
     transition: all 0.23s;
     cursor: pointer;
-    font-size: 12pt;
     margin-left: 10px;
 }
 
-.msger-send-btn:hover {
-    background: var(--msger-send-button-hover-bg)
-}
-
-.msger-chat {
-    background-color: var(--msger-chat-bg);
-}
-
-.msg-bubble:hover {
-    filter: brightness(1.2);
-}
-
-.msger {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/dark-background.jpg");
-    background-size: cover;
-}
-
-
 /********************************/
-/******** INPUT BAR ********/
+/********      TABS      ********/
 /********************************/
 
-
-.msger-attachment-input {
-    display: none;
-}
-
-.msger-attachment-btn {
-    margin-right: 10px;
-    background: var(--inputbar-area);
-    color: var(--msger-send-button-fg);
-    font-weight: bold;
-    cursor: pointer;
-    padding: 0;
+#tabs {
     display: flex;
+    flex: 1 1 auto; /* Fills remaining space */
+    flex-direction: column; /* Stack tabs vertically */
+}
+
+.tab-button.selected {
+    color: var(--msger-header-hover-colour);
+}
+
+.tab {
+    flex: 1 1 auto; /* Each tab stretches to fill the container */
+    display: flex; /* Optional: Makes content alignment easier */
+    flex-direction: column;
+    visibility: hidden;
+}
+
+/********************************/
+/********      MODAL     ********/
+/********************************/
+
+/* Modal Styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7); /* Black background with transparency */
+    justify-content: center;
     align-items: center;
 }
 
-.msger-attachment-btn:hover {
-    margin-right: 10px;
-    background: var(--msger-input-bg);
-    border-radius: 10%;
+.modal-content {
+    background-color: #201c1c;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    width: 600px;
 }
 
-#left-input-toolbar {
-    padding: 0px;
-    align-items: center;
-    padding-top: 2.5px;
-}
-
-#right-input-toolbar {
-    padding: 0px;
-    align-items: center;
-}
-
-.msger-inputarea {
-    display: flex;
-    padding: 0px 10px 10px 10px;
-    /* border-top: var(--border); */
-    background: var(--inputbar-area);
-}
-
-.msger-inputarea * {
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    font-size: 1em;
-}
-
-.msger-input:focus {
-    flex: 1;
-    background: var(--msger-input-bg);
-    outline: none;
-}
-
-.msger-input {
+.modal-content img {
+    max-width: 100%;
     height: auto;
-    overflow: hidden;
-    overflow-y: auto;
-    resize: none;
+    margin-bottom: 15px;
 }
 
-.msger-send-btn {
-    margin-left: 10px;
-    background: var(--msger-send-button-bg);
-    color: var(--msger-send-button-fg);
-    max-width: min-content;
-    font-weight: bold;
+.modal-content input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.modal-content button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background 0.23s;
-    overflow: hidden;
+    background-color: #007bff;
+    color: white;
+}
+
+.modal-content button:hover {
+    background-color: #0056b3;
 }
 
 
@@ -329,7 +173,7 @@ body {
 
 
 @media (max-width: 512px) {
-    .msger {
+    #app {
         margin: 0px;
         border-radius: 0px;
         height: 100svh;
@@ -339,11 +183,12 @@ body {
         min-height: fit-content;
     }
 
-    .msger-send-btn {
+    #send-message-button {
         display: none;
     }
 
     .bottom-nav {
-        background-color: var(--body-bg);
+        /* background-color: var(--body-bg); */
+        background-color: transparent;
     }
 }
