--- a/styles/tabs/chat.css
+++ b/styles/tabs/chat.css
@@ -8,7 +8,8 @@
 #message-area {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    /* GROW / SHRINK / BASIS */
+    flex: 1 1 auto;
     overflow-y: auto;
     padding: 10px;
 }
@@ -50,6 +51,34 @@
     cursor: pointer;
 }
 
+.msg-bubble:hover {
+    filter: brightness(1.2);
+}
+
+.msg-bubble .download-waveform-button {
+    visibility: hidden;
+    background-color: transparent;
+    border: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.msg-bubble:hover .download-waveform-button {
+    visibility: visible;
+    color: var(--msger-header-colour)
+}
+
+.msg-bubble:hover .download-waveform-button:hover {
+    visibility: visible;
+    color: var(--msger-header-colour-hover);
+    cursor: pointer;
+}
+
+.msg-bubble.sending {
+    background: var(--input-bar-bg);
+    opacity: 0.5;
+}
+
 .msg-info {
     display: flex;
     justify-content: space-between;
@@ -80,19 +109,9 @@
     border-bottom-right-radius: 0;
 }
 
-.msg-bubble.sending {
-    background: var(--input-bar-bg);
-    opacity: 0.5;
-}
-
 .right-user-msg .msg-img {
     margin: 0 0 0 10px;
 }
-
-.msg-bubble:hover {
-    filter: brightness(1.2);
-}
-
 
 /********************************/
 /******** INPUT BAR ********/
@@ -111,9 +130,14 @@
     flex: 0 0 auto;
     padding: 0px;
     margin: 20px;
+    margin-top: 0px;
     /* border-top: var(--border); */
     background: var(--inputbar-area);
+    background-attachment: unset;
     border-radius: 10px;
+    /* Make sure the input-bar is over everything (like the header */
+    position: sticky;
+    top: 0;
 }
 
 #input-area * {
@@ -124,12 +148,15 @@
 }
 
 #left-input-toolbar {
+    display: flex;
     padding: 0px;
+    padding-left: 5px;
     margin: 0px;
     align-items: center;
 }
 
 #right-input-toolbar {
+    display: flex;
     padding: 0px;
     align-items: center;
 }
@@ -146,6 +173,7 @@
     align-items: center;
     vertical-align: center;
     display: -webkit-flex;
+    padding-left: 5px;
 }
 
 #input-bar::-webkit-scrollbar-track {
@@ -175,11 +203,15 @@
 
 #send-message-button-with-icon {
     display: none;
-    font-size: 30px;
+    flex: 1 1 auto;
     padding: 0px;
     background-color: transparent;
     color: var(--msger-send-button-fg);
 }
+
+/* #send-message-button-with-icon i {
+    padding: 0px;
+} */
 
 #send-message-button-with-icon:hover {
     color: var(--msger-send-button-hover-fg);
@@ -218,11 +250,38 @@
 .system-message {
     font-size: 12px;
     margin: 10px;
+    display: flex;
 }
 
 .system-message i {
     font-size: 14px;
     margin-right: 10px;
+}
+
+.system-message #username-text {
+    color: var(--msger-header-colour-hover);
+    text-shadow: 0 0 2px var(--msger-header-colour-hover), 0 0 4px var(--msger-header-colour-hover);
+    font-weight: bold;
+}
+
+.system-message #username-text:hover {
+    text-shadow: 0 0 3px var(--msger-header-colour-hover), 0 0 6px var(--msger-header-colour-hover), 0 0 9px var(--msger-header-colour-hover);
+}
+
+.system-message #config-button-ref {
+    color: var(--msger-header-colour);
+    display: inline;
+    align-items: center;
+    margin: 0px;
+    margin-left: 8px;
+}
+
+.system-message #config-button-ref i {
+    margin: 0px;
+}
+
+.system-message #config-button-ref:hover {
+    color: var(--msger-header-colour-hover);
 }
 
 
