--- a/styles/tabs/oscillator.css
+++ b/styles/tabs/oscillator.css
@@ -1,4 +1,55 @@
+
 #tab-oscillator {
-    margin-left: 20px;
-    margin-top: 20px;
+    display: flex;
+}
+
+#tab-oscillator .tab-header {
+    text-align: center;
+}
+
+#tab-oscillator .oscillator-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* #tab-oscillator .oscillator-controls label {
+    display: flex;
+    flex: 1 1 auto;
+} */
+
+#oscillator-waveform-graph {
+    display: flex;
+    flex: 0 0 auto;
+    /* max-width: 60vw; */
+    max-width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+#oscillator-waveform {
+    /* flex: 1 1 auto; */
+    max-width: 95%;
+}
+
+.play-button {
+    display: flex;
+    flex: 1 1 auto;
+    align-items: center;
+    justify-content: center;
+    max-height: 10%;
+}
+
+.play-button button {
+    font-size: 30pt;
+    background: none;
+    border: none;
+    color: var(--msger-header-colour);
+    padding-bottom: 10px;
+}
+
+.play-button button:hover {
+    color: var(--msger-header-colour-hover);
+    cursor: pointer;
 }
