--- a/styles/schemes.css
+++ b/styles/schemes.css
@@ -6,7 +6,7 @@
 
 
 /* White Mode */
-:root {
+:root, :root.light-scheme {
     --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     /* --msger-bg: #fff; */
     --border: 2px solid #ddd;
@@ -22,7 +22,7 @@
     --msger-send-button-bg: rgb(0, 196, 65);
     --msger-send-button-fg: #fff;
     --msger-send-button-hover-bg: rgb(0, 180, 50);
-    --input-bar-bg: #ddd;
+    --input-bar-bg: transparency;
     --msg-img-bg: #ddd;
     --msger-input-placeholder-fg: #838384;
     --msger-send-button-disabled-bg: grey;
@@ -31,11 +31,11 @@
     --mobile-width: 600px;
 }
 
-:root.dark-scheme {
+:root:root.dark-scheme {
     --body-bg: #0d0d0d;
     /* --body-bg: linear-gradient(135deg, #2d2d2d 0%, #6a6a6a 100%); */
     /* --msger-bg: #351F39; */
-    --msger-bg: #38415f;
+    --msger-bg: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), #38415f;
     --msger-bg-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/dark-background.jpg");;
     --border: 1px solid #0000007b;
     --left-msg-bg: #444;
@@ -44,6 +44,7 @@
     --msger-header-bg: rgba(63, 62, 62, 0.2);
     --msger-header-colour: #a6a7a7;
     --msger-header-colour-hover: #ffffff;
+    --msger-header-colour-disabled: #545454;
     --msger-scrollbar-track: #0000007b;
     --msger-scrollbar-thumb: #0b0b0b;
     --msger-chat-bg: transparent;
