--- a/styles/tabs/chat.css
+++ b/styles/tabs/chat.css
@@ -4,26 +4,22 @@
 /********    CHAT TAB    ********/
 /********************************/
 
-
 #message-area {
     display: flex;
     flex-direction: column;
     /* GROW / SHRINK / BASIS */
     flex: 1 1 auto;
     overflow-y: auto;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 #message-area::-webkit-scrollbar {
     width: 6px;
 }
 
-#message-area::-webkit-scrollbar-track {
-    background: var(--msger-scrollbar-track);
-}
-
-#message-area::-webkit-scrollbar-thumb {
-    background: var(--msger-scrollbar-thumb);
+.message {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .user-msg {
@@ -123,13 +119,14 @@
 
 #input-area button:hover {
     color: var(--msger-header-colour-hover);
+    cursor: pointer;
 }
 
 #input-area {
     display: flex;
     flex: 0 0 auto;
     padding: 0px;
-    margin: 20px;
+    /* margin: 20px; */
     margin-top: 0px;
     /* border-top: var(--border); */
     background: var(--inputbar-area);
@@ -147,22 +144,26 @@
     font-size: 1em;
 }
 
-#left-input-toolbar {
+#left-input-toolbar, #right-input-toolbar {
     display: flex;
     padding: 0px;
-    padding-left: 5px;
     margin: 0px;
     align-items: center;
 }
 
-#right-input-toolbar {
+#left-input-toolbar i, #right-input-toolbar i {
     display: flex;
-    padding: 0px;
+    flex: 1 1 auto;
+    font-size: 20px; /* Adjust the size as needed based on padding or other elements */
+    height: 42px;
+    width: 42px;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 #input-bar {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     height: auto;
     overflow: hidden;
     overflow-y: auto;
@@ -173,7 +174,7 @@
     align-items: center;
     vertical-align: center;
     display: -webkit-flex;
-    padding-left: 5px;
+    padding: 10px 0px 10px 0px;
 }
 
 #input-bar::-webkit-scrollbar-track {
@@ -186,7 +187,7 @@
     align-items: center;
 }
 
-#send-message-button {
+#right-input-toolbar #send-message-button {
     margin-left: 10px;
     background: var(--msger-send-button-bg);
     color: var(--msger-send-button-fg);
@@ -197,28 +198,33 @@
     overflow: hidden;
 }
 
-#send-message-button.disabled {
+#right-input-toolbar #send-message-button:hover {
+    margin-left: 10px;
+    background: var(--msger-send-button-hover-bg);
+}
+
+#right-input-toolbar #send-message-button:disabled {
     background: var(--msger-send-button-disabled-bg);
 }
 
-#send-message-button-with-icon {
-    display: none;
+#right-input-toolbar #send-message-button-with-icon {
+    display: none; /* Hide for non mobiles */
     flex: 1 1 auto;
     padding: 0px;
     background-color: transparent;
-    color: var(--msger-send-button-fg);
+    color: var(--msger-send-button-hover-fg);
 }
 
 /* #send-message-button-with-icon i {
     padding: 0px;
 } */
 
-#send-message-button-with-icon:hover {
-    color: var(--msger-send-button-hover-fg);
+.input-area #right-input-toolbar #send-message-button-with-icon:hover {
+    color: #fff;
 }
 
-#send-message-button-with-icon.disabled {
-    color: var(--msger-send-button-disabled-fg);
+#right-input-toolbar #send-message-button-with-icon:disabled {
+    color: var(--msger-header-colour-disabled);
 }
 
 #attachment-input {
@@ -249,7 +255,7 @@
 
 .system-message {
     font-size: 12px;
-    margin: 10px;
+    /* margin: 10px; */
     display: flex;
 }
 
@@ -260,12 +266,7 @@
 
 .system-message #username-text {
     color: var(--msger-header-colour-hover);
-    text-shadow: 0 0 2px var(--msger-header-colour-hover), 0 0 4px var(--msger-header-colour-hover);
     font-weight: bold;
-}
-
-.system-message #username-text:hover {
-    text-shadow: 0 0 3px var(--msger-header-colour-hover), 0 0 6px var(--msger-header-colour-hover), 0 0 9px var(--msger-header-colour-hover);
 }
 
 .system-message #config-button-ref {
@@ -290,11 +291,11 @@
 /********************************/
 
 @media (max-width: 600px) {
-    #send-message-button {
+    #input-area #send-message-button {
         display: none;
     }
 
-    #send-message-button-with-icon {
+    #input-area #send-message-button-with-icon {
         display: flex;
     }
 }
