--- a/styles/schemes.css
+++ b/styles/schemes.css
@@ -38,7 +38,9 @@
     /* --msger-bg: #351F39; */
     --theme-button-icon: "\f185\00a0"; /* fa-sun */
     --msger-bg: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), #38415f;
-    --msger-bg-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/dark-background.jpg");;
+    /* --msger-bg: #0d0d0d; */
+    --msger-bg: #161517;
+    /* --msger-bg-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/dark-background.jpg"); */
     --border: 1px solid #0000007b;
     --left-msg-bg: #444;
     --right-msg-bg: #405769b0;
