--- a/styles/tabs/chat.css
+++ b/styles/tabs/chat.css
@@ -142,7 +142,7 @@
     /* Make sure the input-bar is over everything (like the header */
     position: sticky;
     top: 0;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 #input-area * {
