Some design and library improvements.

--- a/styles/schemes.css
+++ b/styles/schemes.css
@@ -12,7 +12,7 @@
     --border: 2px solid #ddd;
     --left-msg-bg: #ececec;
     --right-msg-bg: #579ffb;
-    --right-msg-fg: #fff;
+    --right-msg-fg: #000;
     --msger-header-bg: #eee;
     --msger-header-colour: #5d5d5d;
     --msger-scrollbar-track: #ddd;
