--- a/styles/tabs/chat.css
+++ b/styles/tabs/chat.css
@@ -28,26 +28,38 @@
 .user-msg {
     display: flex;
     align-items: flex-end;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .user-msg:last-of-type {
-    margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
 }
 
 .msg-bubble {
+    margin-left: 10px;
     display: block;
     max-width: 100%;
     min-width: 0;
     overflow-wrap: break-word;
-    padding: 15px;
+    /* padding: 15px; */
     border-radius: 15px;
     background: var(--left-msg-bg);
     color: var(--right-msg-fg);
     word-break: break-word;
-    overflow: hidden;
-    text-overflow: ellipsis;
+
+    background: none;
+}
+
+.message {
+    display: flex;
+    align-items: center;
+}
+
+.msg-bubble pre {
+    color: var(--right-msg-fg);
+    font-size: 0.85em;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .msg-bubble img {
@@ -84,33 +96,34 @@
 
 .msg-info {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .msg-info-name {
+    font-size: 0.85em;
     margin-right: 10px;
     font-weight: bold;
 }
 
 .msg-info-time {
-    font-size: 0.85em;
+    font-size: 0.6em;
 }
 
 .left-user-msg .msg-bubble {
     border-bottom-left-radius: 0;
 }
 
-.right-user-msg {
+/* .right-user-msg {
     flex-direction: row-reverse;
-}
+} */
 
-.right-user-msg .msg-bubble {
+/* .right-user-msg .msg-bubble {
     background: var(--right-msg-bg);
     color: var(--right-msg-fg);
     border-bottom-right-radius: 0;
-}
+} */
 
 .right-user-msg .msg-img {
     margin: 0 0 0 10px;
@@ -262,7 +275,7 @@
 /********************************/
 
 .system-message {
-    font-size: 12px;
+    font-size: 0.85em;
     /* margin: 10px; */
     display: flex;
 }
