--- a/styles/tabs/graph.css
+++ b/styles/tabs/graph.css
@@ -7,33 +7,34 @@
     margin: 20px;
 }
 
-#fft-result-graph, #input-waveform-graph {
+/* #fft-result-graph, #input-waveform-graph {
     display: block;
     /* left: 50%;
     top: 50%;
     transform: translate(-50%, -50%); */
     /* max-height: 60vh;
     max-width: 60vw; */
-}
+/* } */
 
 #input-waveform-graph {
     /* flex: 1 1 auto; */
     overflow: hidden;
 }
 
-#fft-result-graph {
-    flex: 0;
-    overflow: hidden;
-}
-
 #waveform-graph {
-    display: flex;
-    flex: 1 1 auto;
     overflow: hidden;
     max-height: 100%;
     max-width: 100%;
 }
 
-#fft-graph {
+#fft-result-graph {
     height: 100%;
+    width: 100%;
+    overflow: scroll;
+
+}
+
+#fft-graph {
+    display: flex;
+    border: 1px solid black;
 }
